--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body{
   margin: 0;
-  background-image: url(images/bg.jpg);
+  background-image: url(bg.jpg);
   font-weight: 300;
   font-family: sans-serif;
 }
